--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,17 +1,22 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+ @tailwind base;
+ @tailwind components;
+ @tailwind utilities;
 
-* {
-  @apply box-border m-0 p-0;
-}
+ * {
+   @apply box-border m-0 p-0;
+ }
 
-html,
-body,
-#root {
-  @apply h-full;
-}
+ html,
+ body,
+ #root {
+   @apply h-full;
+ }
 
-.btn-purple {
-  @apply bg-purple rounded-xl text-white w-[300px] h-[70px] drop-shadow-button font-nunito font-extrabold text-2xl;
-}
+ #root {
+   @apply flex flex-col;
+ }
+
+ .btn-darkgreen {
+   @apply bg-darkgreen rounded-xl text-white w-[300px] h-[70px] drop-shadow-button text-2xl;
+ }
+ 
