add font and button

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Caveat&family=Inter:wght@300;400;500;600&family=Philosopher:ital,wght@0,400;0,700;1,400&display=swap');
+
  @tailwind base;
  @tailwind components;
  @tailwind utilities;
@@ -20,3 +22,7 @@
    @apply bg-darkgreen rounded-xl text-white w-[300px] h-[70px] drop-shadow-button text-2xl;
  }
  
+ .btn-yellow {
+   @apply bg-yellow rounded-xl text-white w-[300px] h-[70px] drop-shadow-button text-2xl;
+ }
+
